tests/fixtures/positive/style/WildcardImport.kt
package style

import kotlin.collections.*

fun main() {
    val items = listOf(1, 2, 3)
    println(items)
}
