tests/fixtures/negative/style/WildcardImport.kt
package style

import kotlin.collections.listOf

fun main() {
    val items = listOf(1, 2, 3)
    println(items)
}
